zeek_1/zeek-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zeek-service
spec:
  selector: 
    app: zeek
  ports:
    - name: zeek-port
      port: 4777
      targetPort: 4777
  type: ClusterIP
