zeek_1/zeek-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zeek-networking-policy
spec:
  podSelector:
    matchLabels:
      app: zeek
  ingress:
    - from:
        - podSelector: {}
  egress:
    - to:
        - podSelector: {}
